@@ -4,14 +4,20 @@ import org.jboss.galleon.ProvisioningException;
 import org.jboss.logging.Logger;
 import org.wildfly.channel.ChannelManifestCoordinate;
 import org.wildfly.channel.MavenCoordinate;
+import org.wildfly.channel.version.VersionMatcher;
+import org.wildfly.common.annotation.Nullable;
 import org.wildfly.installationmanager.ArtifactChange;
+import org.wildfly.installationmanager.AvailableManifestVersions;
 import org.wildfly.installationmanager.CandidateType;
 import org.wildfly.installationmanager.Channel;
 import org.wildfly.installationmanager.ChannelChange;
 import org.wildfly.installationmanager.FileConflict;
 import org.wildfly.installationmanager.HistoryResult;
 import org.wildfly.installationmanager.InstallationChanges;
+import org.wildfly.installationmanager.InstallationUpdates;
 import org.wildfly.installationmanager.ManifestVersion;
+import org.wildfly.installationmanager.ManifestVersionChange;
+import org.wildfly.installationmanager.ManifestVersionPair;
 import org.wildfly.installationmanager.MavenOptions;
 import org.wildfly.installationmanager.OperationNotAvailableException;
 import org.wildfly.installationmanager.Repository;
@@ -22,9 +28,11 @@ import org.wildfly.prospero.actions.ApplyCandidateAction;
 import org.wildfly.prospero.actions.InstallationExportAction;
 import org.wildfly.prospero.actions.InstallationHistoryAction;
 import org.wildfly.prospero.actions.MetadataAction;
+import org.wildfly.prospero.actions.OverrideBuilder;
 import org.wildfly.prospero.actions.UpdateAction;
+import org.wildfly.prospero.api.ChannelVersion;
+import org.wildfly.prospero.api.InstallationMetadata;
 import org.wildfly.prospero.api.MavenOptions.Builder;
-import org.wildfly.prospero.api.TemporaryRepositoriesHandler;
 import org.wildfly.prospero.api.exceptions.InvalidUpdateCandidateException;
 import org.wildfly.prospero.galleon.GalleonCallbackAdapter;
 import org.wildfly.prospero.metadata.ManifestVersionRecord;
@@ -32,6 +40,7 @@ import org.wildfly.prospero.spi.internal.CliProvider;
 import org.wildfly.prospero.api.SavedState;
 import org.wildfly.prospero.api.exceptions.MetadataException;
 import org.wildfly.prospero.api.exceptions.OperationException;
+import org.wildfly.prospero.updates.ChannelsUpdateResult;
 import org.wildfly.prospero.updates.UpdateSet;
 
 import java.nio.file.Files;
@@ -41,6 +50,7 @@ import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Locale;
 import java.util.Objects;
@@ -53,6 +63,9 @@ import java.util.stream.Stream;
 public class ProsperoInstallationManager implements InstallationManager {
 
     private static final Logger logger = Logger.getLogger(GalleonCallbackAdapter.class);
+
+    private static final Comparator<ManifestVersionPair> MANIFEST_VERSION_PAIR_COMPARATOR =
+            (p1, p2) -> VersionMatcher.COMPARATOR.compare(p1.getPhysicalVersion(), p2.getPhysicalVersion());
 
     private final ActionFactory actionFactory;
     private Path installationDir;
@@ -118,9 +131,23 @@ public class ProsperoInstallationManager implements InstallationManager {
     }
 
     @Override
-    public boolean prepareUpdate(Path targetDir, List<Repository> repositories) throws Exception {
-        try (UpdateAction prepareUpdateAction = actionFactory.getUpdateAction(map(repositories, ProsperoInstallationManager::mapRepository))) {
+    public boolean prepareUpdate(Path candidatePath, List<Repository> repositories) throws Exception {
+        return prepareUpdate(candidatePath, repositories, false);
+    }
+
+    @Override
+    public boolean prepareUpdate(Path targetDir, List<Repository> repositories, boolean allowDowngrade) throws Exception {
+        try (UpdateAction prepareUpdateAction = actionFactory.getUpdateAction(map(repositories, ProsperoInstallationManager::mapRepository), allowDowngrade)) {
             return prepareUpdateAction.buildUpdate(targetDir);
+        }
+    }
+
+    @Override
+    public boolean prepareUpdate(Path targetDir, List<Repository> repositories, List<ManifestVersion> manifestVersions, boolean allowDowngrade)
+            throws Exception {
+        var mappedRepositories = map(repositories, ProsperoInstallationManager::mapRepository);
+        try (UpdateAction updateAction = actionFactory.getUpdateAction(mappedRepositories, manifestVersions, allowDowngrade)) {
+            return updateAction.buildUpdate(targetDir);
         }
     }
 
@@ -179,13 +206,56 @@ public class ProsperoInstallationManager implements InstallationManager {
         }
     }
 
-    @Override
     public List<ArtifactChange> findUpdates(List<Repository> repositories) throws Exception {
-        try (UpdateAction updateAction = actionFactory.getUpdateAction(map(repositories, ProsperoInstallationManager::mapRepository))) {
+        return findInstallationUpdates(repositories, null).artifactUpdates();
+    }
+
+    @Override
+    public InstallationUpdates findInstallationUpdates(List<Repository> repositories) throws Exception {
+        return findInstallationUpdates(repositories, null);
+    }
+
+    @Override
+    public InstallationUpdates findInstallationUpdates(List<Repository> repositories, List<ManifestVersion> manifestVersions)
+            throws Exception {
+        var mappedRepositories = map(repositories, ProsperoInstallationManager::mapRepository);
+        try (UpdateAction updateAction = actionFactory.getUpdateAction(mappedRepositories, manifestVersions, true)) {
             final UpdateSet updates = updateAction.findUpdates();
-            return updates.getArtifactUpdates().stream()
+            List<ArtifactChange> artifactUpdates = updates.getArtifactUpdates().stream()
                     .map(ProsperoInstallationManager::mapArtifactChange)
-                    .collect(Collectors.toList());
+                    .toList();
+            List<ManifestVersionChange> channelUpdates = updates.getChannelVersionChanges().stream().map(ProsperoInstallationManager::mapChannelVersionChange).toList();
+            return new InstallationUpdates(artifactUpdates, channelUpdates);
+        }
+    }
+
+    @Override
+    public List<AvailableManifestVersions> findAvailableManifestVersions(List<Repository> repositories, boolean includeDowngrades) throws Exception {
+        var mappedRepositories = map(repositories, ProsperoInstallationManager::mapRepository);
+        try (UpdateAction updateAction = actionFactory.getUpdateAction(mappedRepositories, true)) {
+            ChannelsUpdateResult channelUpdates = updateAction.findChannelUpdates(includeDowngrades);
+            ArrayList<AvailableManifestVersions> results = new ArrayList<>();
+
+            for (String channelName: channelUpdates.getUpdatedChannels()) {
+                ChannelsUpdateResult.ChannelResult channelUpdate = channelUpdates.getUpdatedVersion(channelName);
+
+                List<ManifestVersionPair> availableVersions = channelUpdate.getAvailableVersions().stream()
+                        // Exclude current version from the list of available versions
+                        .filter(v -> !v.getPhysicalVersion().equals(channelUpdate.getCurrentVersion().getPhysicalVersion()))
+                        .map(ProsperoInstallationManager::mapChannelVersion)
+                        // Sort in ascending order
+                        .sorted(MANIFEST_VERSION_PAIR_COMPARATOR).toList();
+
+                ChannelVersion currentVersion = channelUpdate.getCurrentVersion();
+                String location = currentVersion.getLocation();
+                ManifestVersionPair mappedCurrentVersions = new ManifestVersionPair(currentVersion.getPhysicalVersion(),
+                        currentVersion.getLogicalVersion());
+
+                AvailableManifestVersions availableManifestVersions =
+                        new AvailableManifestVersions(channelName, location, mappedCurrentVersions, availableVersions);
+                results.add(availableManifestVersions);
+            }
+            return results;
         }
     }
 
@@ -373,6 +443,19 @@ public class ProsperoInstallationManager implements InstallationManager {
         }
     }
 
+    private static ManifestVersionChange mapChannelVersionChange(org.wildfly.prospero.api.ChannelVersionChange change) {
+        ManifestVersionPair oldVersion = new ManifestVersionPair(change.oldVersion().getPhysicalVersion(),
+                change.oldVersion().getLogicalVersion());
+        ManifestVersionPair newVersion = new ManifestVersionPair(change.newVersion().getPhysicalVersion(),
+                change.newVersion().getLogicalVersion());
+        return new ManifestVersionChange(change.channelName(), change.oldVersion().getLocation(),
+                oldVersion, newVersion, change.isDowngrade());
+    }
+
+    private static ManifestVersionPair mapChannelVersion(ChannelVersion channelVersion) {
+        return new ManifestVersionPair(channelVersion.getPhysicalVersion(), channelVersion.getLogicalVersion());
+    }
+
     private static ChannelChange mapChannelChange(org.wildfly.prospero.api.ChannelChange change) {
         final Channel oldChannel = change.getOldChannel() == null ? null : mapChannel(change.getOldChannel());
         final Channel newChannel = change.getNewChannel() == null ? null : mapChannel(change.getNewChannel());
@@ -409,14 +492,50 @@ public class ProsperoInstallationManager implements InstallationManager {
             return new InstallationHistoryAction(server, null);
         }
 
-        protected UpdateAction getUpdateAction(List<org.wildfly.channel.Repository> repositories) throws OperationException, ProvisioningException {
+        protected UpdateAction getUpdateAction(List<org.wildfly.channel.Repository> repositories, boolean allowManifestDowngrades) throws OperationException, ProvisioningException {
+            return getUpdateAction(repositories, null, allowManifestDowngrades);
+        }
+
+        protected UpdateAction getUpdateAction(List<org.wildfly.channel.Repository> repositories, @Nullable List<ManifestVersion> manifestVersions, boolean allowManifestDowngrades) throws OperationException, ProvisioningException {
             final List<org.wildfly.channel.Channel> overrideChannels;
-            if (!repositories.isEmpty()) {
-                try (MetadataAction metadataAction = getMetadataAction()) {
-                    overrideChannels = TemporaryRepositoriesHandler.overrideRepositories(metadataAction.getChannels(), repositories);
+            List<String> manifestVersionsStrings = null;
+
+            try (InstallationMetadata im = InstallationMetadata.loadInstallation(server)) {
+                if (manifestVersions != null && !allowManifestDowngrades) {
+                    // The manifest versions to update to has been specified *and* manifest downgrades are not allowed.
+                    // => Fail the operation if there is a downgrade present.
+                    for (ChannelVersion channelVersion : im.getChannelVersions()) {
+                        Optional<ManifestVersion> manifestVersionOptional = manifestVersions.stream()
+                                .filter(mv -> mv.getChannelId().equals(channelVersion.getChannelName()))
+                                .findFirst();
+                        if (manifestVersionOptional.isPresent()) {
+                            ManifestVersion manifestVersion = manifestVersionOptional.get();
+                            if (!ManifestVersion.Type.MAVEN.equals(manifestVersion.getType())) {
+                                // Only check MAVEN versions, comparing URL versions makes no sense.
+                                continue;
+                            }
+                            String newVersion = manifestVersion.getVersion();
+                            String oldVersion = channelVersion.getPhysicalVersion();
+                            if (VersionMatcher.COMPARATOR.compare(newVersion, oldVersion) < 0) {
+                                String message = String.format("Manifest %s is being downgraded from %s to %s. Manifest downgrades need to be explicitly allowed in the command invocation.",
+                                        channelVersion.getLocation(), oldVersion, newVersion);
+                                throw new RuntimeException(message);
+                            }
+                        }
+                    }
                 }
-            } else {
-                overrideChannels = Collections.emptyList();
+
+                if (manifestVersions != null) {
+                    manifestVersionsStrings = manifestVersions.stream()
+                            .map(mv -> mv.getChannelId() + "::" + mv.getVersion())
+                            .toList();
+                }
+
+                overrideChannels = OverrideBuilder
+                        .from(im.getProsperoConfig().getChannels())
+                        .withRepositories(repositories)
+                        .withManifestVersions(manifestVersionsStrings)
+                        .build();
             }
             return new UpdateAction(server, overrideChannels, mavenOptions, null);
         }
